--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>DamisBnb | Case vacanze, appartamenti o camere in affitto</title>
   <meta name="description" content="Affitta posti unici in qualsiasi località. Sentiti a casa ovunque tu sia a prezzi convenienti con DamisBnb."/>
 
+<!-- FACEBOOK OPEN GRAPH -->
+  <meta property="og:url" content="https://damis-io.github.io/DamisBnb/index.html" /> 
+  <meta property="og:title" content="DamisBnb | Case vacanze, appartamenti o camere in affitto" /> 
+  <meta property="og:image" content="https://damis-io.github.io/DamisBnb/damisbnbpostfacebook.png" /> 
+  <meta property="og:description" content="Affitta posti unici in qualsiasi località. Sentiti a casa ovunque tu sia a prezzi convenienti con DamisBnb." />
+
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
