--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- FACEBOOK OPEN GRAPH -->
   <meta property="og:url" content="https://damis-io.github.io/DamisBnb/index.html" /> 
   <meta property="og:title" content="DamisBnb | Case vacanze, appartamenti o camere in affitto" /> 
-  <meta property="og:image" content="https://damis-io.github.io/DamisBnb/damisbnbpostfacebook.png" /> 
+  <meta property="og:image" content="https://damis-io.github.io/DamisBnb/damisbnb.jpg" /> 
   <meta property="og:description" content="Affitta posti unici in qualsiasi località. Sentiti a casa ovunque tu sia a prezzi convenienti con DamisBnb." />
 
   <!-- CSS  -->
