--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="description" content="Affitta posti unici in qualsiasi località. Sentiti a casa ovunque tu sia a prezzi convenienti con DamisBnb."/>
 
 <!-- FACEBOOK OPEN GRAPH -->
-  <meta property="og:url" content="https://damis-io.github.io/DamisBnb/index.html" /> 
+  <meta property="og:type" content="article" /> 
+  <meta property="og:url" content="https://damis-io.github.io/DamisBnb/index.html" />
   <meta property="og:title" content="DamisBnb | Case vacanze, appartamenti o camere in affitto" /> 
   <meta property="og:image" content="https://damis-io.github.io/DamisBnb/damisbnb.jpg" /> 
   <meta property="og:description" content="Affitta posti unici in qualsiasi località. Sentiti a casa ovunque tu sia a prezzi convenienti con DamisBnb." />
