--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav>
       <div class="nav-wrapper white">
         <a href="#" class="brand-logo">DamisBnb</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#servizio">Servizio</a></li>
           <li><a href="#registrazione">Registrati</a></li>
