--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 
-  <!-- FIXED NAVBAR -->
+  <!-- FIXED NAVBAR .. -->
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper white">
