--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 </head>
 <body>
 
-  <!-- FIXED NAVBAR .. -->
+  <!-- FIXED NAVBAR -->
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper white">
-        <a href="#!" class="brand-logo">DamisBnb</a>
+        <a href="#" class="brand-logo">DamisBnb</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#servizio">Servizio</a></li>
