--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="#registrazione">Registrati</a></li>
           <li><a href="#ospita">Ospita</a></li>
         </ul>
-        <ul class="sidenav" id="mobile-demo">
+        <ul class="sidenav sidenav-overlay" id="mobile-demo">
           <li><a href="#servizio">Servizio</a></li>
           <li><a href="#registrazione">Registrati</a></li>
           <li><a href="#ospita">Ospita</a></li>
