--- a/index.html
+++ b/index.html
@@ -227,11 +227,19 @@
     q.parentNode.insertBefore(js,q) } })()
   </script>
   
+
   <script>
+      document.addEventListener('DOMContentLoaded', function() {
+      var elems = document.querySelectorAll('.sidenav');
+      var instances = M.Sidenav.init(elems, options);
+    });
+
+    // Or with jQuery
+
     $(document).ready(function(){
       $('.sidenav').sidenav();
-    })
+    });
   </script>
-
+  
   </body>
 </html>
