--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   <script>
     function closeNav(event) {
       event.stopPropagation();
-      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById('.sidenav').style.width = "0";
     }
   </script>
 
