--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <li><a href="#registrazione">Registrati</a></li>
           <li><a href="#ospita">Ospita</a></li>
         </ul>
+        
       </div>
     </nav>
   </div>
@@ -235,11 +236,23 @@
     });
   </script>
 
+<!-- CHIUSURA SIDENAV -->
   <script>
     $(document).ready(function () {
         $('.sidenav').sidenav();
     });
-</script>
+  </script>
+
+  <!-- GOOGLE ANALYTICS -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155982218-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-155982218-1');
+    </script>
 
   </body>
 </html>
